Sticky group labels: avoid obscuring scrollbar on iOS

--- a/docs/src/app/(docs)/react/components/autocomplete/demos/grid/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/autocomplete/demos/grid/css-modules/index.module.css
@@ -181,7 +181,11 @@
 
 .GroupLabel {
   box-sizing: border-box;
+  position: sticky;
+  z-index: 1;
+  top: 0;
   padding: 0.5rem;
+  margin: 0 0.5rem 0 0; /* Prevent overlap with iOS overlay scrollbars. */
   font-size: 0.75rem;
   font-weight: 700;
   line-height: 1rem;
@@ -189,9 +193,6 @@
   text-transform: uppercase;
   letter-spacing: 0.05em;
   background-color: light-dark(white, var(--color-neutral-950));
-  position: sticky;
-  z-index: 1;
-  top: 0;
 }
 
 .Group {
