--- a/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
@@ -122,7 +122,11 @@
 
 .GroupLabel {
   box-sizing: border-box;
-  padding: 0.5rem 1rem 0.25rem calc(0.625rem + 0.75rem + 0.5rem);
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  padding: 0.5rem 0.5rem 0.25rem calc(0.625rem + 0.75rem + 0.5rem);
+  margin: 0 0.5rem 0 0; /* Prevent overlap with iOS overlay scrollbars. */
   font-size: 0.75rem;
   font-weight: 700;
   line-height: 1rem;
@@ -130,9 +134,6 @@
   letter-spacing: 0.05em;
   color: light-dark(var(--color-neutral-500), var(--color-neutral-400));
   background-color: light-dark(white, var(--color-neutral-950));
-  position: sticky;
-  z-index: 1;
-  top: 0;
 }
 
 .Item {
